# ragtime

./: .env.example  .env.example.ollama  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yml  pyproject.toml
frontend/: bun.lockb  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: ChatInterface.tsx  LoadingIndicator.tsx  Message.tsx  Typewriter.tsx
frontend/src/hooks/: useChat.ts  useTypewriter.ts
frontend/src/lib/: types.ts
ragtime/: main.py
ragtime/tools/: data_loader.py  database.py  query.py  server.py  utils.py  youtube_transcript_data_loader.py
tools/: __init__.py  __main__.py  transcript_util.py  yt_tools.py
